// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel snapshots should render Panel 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Panel Panel--light"
    data-test-box=""
    data-test-color-picker-panel=""
  >
    <div
      class="css-1e2q934 Panel__header Panel__header--light"
      data-test-box=""
    >
      <div
        class="css-gu5024 Tabs Tabs--light"
        data-test-box=""
      >
        <div
          class="css-17z9djj Tabs__tab Tabs__tab--light Tabs__tab--active Tabs__tab--active--light Tabs__tab--disabled Tabs__tab--disabled--light"
          data-test-box=""
          data-test-tab="custom"
        >
          Custom
        </div>
      </div>
      <div
        class="css-1jnxvbp Icon Icon--light Icon--clickable Icon--clickable--light"
        data-test-icon="close"
        height="11"
        name="Close"
        width="11"
      />
    </div>
    <div
      class="ant-color-picker-slider-container"
    />
    <div
      class="css-175hdsd"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp ButtonIcon ButtonIcon--light"
        data-test-button-icon="sampler"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="sample"
          height="14"
          name="Sample"
          width="14"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Panel snapshots should render with active sampler 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Panel Panel--light"
    data-test-box=""
    data-test-color-picker-panel=""
  >
    <div
      class="css-1e2q934 Panel__header Panel__header--light"
      data-test-box=""
    >
      <div
        class="css-gu5024 Tabs Tabs--light"
        data-test-box=""
      >
        <div
          class="css-17z9djj Tabs__tab Tabs__tab--light Tabs__tab--active Tabs__tab--active--light Tabs__tab--disabled Tabs__tab--disabled--light"
          data-test-box=""
          data-test-tab="custom"
        >
          Custom
        </div>
      </div>
      <div
        class="css-1jnxvbp Icon Icon--light Icon--clickable Icon--clickable--light"
        data-test-icon="close"
        height="11"
        name="Close"
        width="11"
      />
    </div>
    <div
      class="ant-color-picker-slider-container"
    />
    <div
      class="css-175hdsd"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp ButtonIcon ButtonIcon--light ButtonIcon--selected ButtonIcon--selected--light"
        data-test-button-icon="sampler"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp Icon Icon--light Icon--blue1 Icon--blue1--light"
          data-test-icon="sample"
          height="14"
          name="Sample"
          width="14"
        />
      </div>
      <div
        class="css-18rrimj ColorSampler ColorSampler--light"
        data-test-box=""
        style="left: 15px; top: 15px;"
      >
        <div
          class="css-1kjclab ColorGridMask ColorGridMask--light"
          data-test-box=""
          data-test-button="color-sampler"
        />
        <div
          class="css-1odrpt5 ColorGrid ColorGrid--light"
          data-test-box=""
        >
          <div
            class="css-fx1txq"
            data-test-box=""
          />
          <div
            class="css-tnkbza ColorGrid__pickerTargetColor ColorGrid__pickerTargetColor--light"
            data-test-box=""
          />
          <div
            class="css-18x4q7r"
            data-test-box=""
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1odpy5d"
            >
              <span
                class="ant-spin-dot-holder"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
